--- a/campaign.html
+++ b/campaign.html
@@ -108,7 +108,7 @@
                 <br>Tel : 03 6196 4268
                 <br>Email : ief@iium.edu.my
                 <br>Website : www.iium.edu.my/ief
-                <br><a href="https://www.facebook.com/iefofficial/">Facebook: https://www.facebook.com/iefofficial/</a>
+                <br><a href="https://www.facebook.com/iium.endowment/">Facebook: https://www.facebook.com/iium.endowment/</a>
             </h5>
         </div>
     </footer>
